--- a/structure/components/bio.njk
+++ b/structure/components/bio.njk
@@ -13,37 +13,36 @@
 			<span>🖼️ <a href="/collections/avatars" class="hidden">More<span class="avatar__hide">  avatars</span></a></span>
 		</div>
 	</div>
-	<div class="biogrid">
-        <div class="biogrid__icon">
+	<dl class="biogrid">
+        <dt class="biogrid__icon">
             <span class="emoji" role="img" aria-label="Pronouns">🌷</span>
-        </div>
-        <div class="biogrid__content">
+        </dt>
+        <dd class="biogrid__content">
             she/her
-        </div>
-        <div class="biogrid__icon">
+        </dd>
+        <dt class="biogrid__icon">
             <span class="emoji" role="img" aria-label="Astrological sign">♊</span>
-        </div>
-        <div class="biogrid__content">
+        </dt>
+        <dd class="biogrid__content">
             Gemini
-        </div>
-        <div class="biogrid__icon">
+        </dd>
+        <dt class="biogrid__icon">
             <span class="emoji" role="img" aria-label="Location">📍</span>
-        </div>
-        <div class="biogrid__content">
+        </dt>
+        <dd class="biogrid__content">
             Wales, UK
-        </div>
-        <div class="biogrid__icon">
+        </dd>
+        <dt class="biogrid__icon">
             <span class="emoji" role="img" aria-label="Local time">⏰</span>
-        </div>
-        <div class="biogrid__content">
+        </dt>
+        <dd class="biogrid__content">
             <span id="localTime" class="lowercase" title="British Summer Time">12:00pm</span> (GMT)
-        </div>
-        <div class="biogrid__icon">
-            <span id="status" class="status" data-status="online"></span>
-        </div>
-        <div class="biogrid__content">
+        </dd>
+        <dt class="biogrid__icon">
+            <span id="status" class="status" data-status="online" aria-label="Status"></span>
+        </dt>
+        <dd class="biogrid__content">
             <span id="statusText">Online now!</span>
-        </div>
-        
-	</div>
+        </dd>
+	</dl>
 </div>
