--- a/structure/components/bio.njk
+++ b/structure/components/bio.njk
@@ -39,7 +39,7 @@
             <span id="localTime" class="lowercase" title="British Summer Time">12:00pm</span> (GMT)
         </dd>
         <dt class="biogrid__icon">
-            <span id="status" class="status" data-status="online" aria-label="Status"></span>
+            <span id="status" class="status" role="img" data-status="online" aria-label="Status"></span>
         </dt>
         <dd class="biogrid__content">
             <span id="statusText">Online now!</span>
