--- a/structure/components/bio.njk
+++ b/structure/components/bio.njk
@@ -15,7 +15,7 @@
 	</div>
 	<dl class="biogrid">
         <dt class="biogrid__icon">
-            <span class="emoji" role="img" aria-label="Pronouns">🌷</span>
+            <span class="emoji" role="img" aria-label="Pronouns">🎃</span>
         </dt>
         <dd class="biogrid__content">
             she/her
@@ -27,7 +27,7 @@
             Gemini
         </dd>
         <dt class="biogrid__icon">
-            <span class="emoji" role="img" aria-label="Location">📍</span>
+            <span class="emoji" role="img" aria-label="Location">🪦</span>
         </dt>
         <dd class="biogrid__content">
             Wales, UK
