📃 Update homepage: remove status

--- a/structure/components/bio.njk
+++ b/structure/components/bio.njk
@@ -36,13 +36,13 @@
             <span class="emoji" role="img" aria-label="Local time">⏰</span>
         </dt>
         <dd class="biogrid__content noscriptHide">
-            <span id="localTime" class="lowercase" title="British Summer Time">12:00pm</span> (GMT)
+            <span id="localTime" class="lowercase" title="British Summer Time">12:00pm</span>&nbsp;(GMT)
         </dd>
-        <dt class="biogrid__icon">
+        {# <dt class="biogrid__icon">
             <span id="status" class="status" role="img" data-status="online" aria-label="Status"></span>
         </dt>
         <dd class="biogrid__content">
             <span id="statusText">Online now!</span>
-        </dd>
+        </dd> #}
 	</dl>
 </div>
