📝 Add blog post

--- a/structure/components/bio.njk
+++ b/structure/components/bio.njk
@@ -36,7 +36,7 @@
             <span class="emoji" role="img" aria-label="Local time">⏰</span>
         </dt>
         <dd class="biogrid__content noscriptHide">
-            <span id="localTime" class="lowercase" title="British Summer Time">12:00pm</span>&nbsp;(GMT)
+            <span id="localTime" class="lowercase" title="British Summer Time">12:00pm</span>&nbsp;(BST)
         </dd>
 	</dl>
 </div>
