--- a/structure/components/bio.njk
+++ b/structure/components/bio.njk
@@ -10,7 +10,7 @@
 			<button id="refreshAvatar" class="button hidden noscriptHide">
 				🔃 Refresh<span class="avatar__hide"> avatar</span>
 			</button>
-			<span>🖼️ <a href="/collections/avatars" class="hidden">More<span class="avatar__hide">  avatars</span></a></span>
+			<span>🖼️ <a href="/curios/avatars" class="hidden">More<span class="avatar__hide">  avatars</span></a></span>
 		</div>
 	</div>
 	<dl class="biogrid">
